--- a/XyrusWorx.Gaming.AnnoCompanion/XyrusWorx.Gaming.AnnoCompanion.Models.Preset1404/XyrusWorx.Gaming.AnnoCompanion.Models.Preset1404.csproj
+++ b/XyrusWorx.Gaming.AnnoCompanion/XyrusWorx.Gaming.AnnoCompanion.Models.Preset1404/XyrusWorx.Gaming.AnnoCompanion.Models.Preset1404.csproj
@@ -37,12 +37,12 @@
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.Composition" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Runtime, Version=4.1.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
-      <HintPath>..\packages\System.Runtime.4.1.0\lib\net462\System.Runtime.dll</HintPath>
+    <Reference Include="System.Runtime, Version=4.1.1.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.Runtime.4.3.0\lib\net462\System.Runtime.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="System.Runtime.InteropServices.RuntimeInformation, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
-      <HintPath>..\packages\System.Runtime.InteropServices.RuntimeInformation.4.0.0\lib\net45\System.Runtime.InteropServices.RuntimeInformation.dll</HintPath>
+    <Reference Include="System.Runtime.InteropServices.RuntimeInformation, Version=4.0.1.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.Runtime.InteropServices.RuntimeInformation.4.3.0\lib\net45\System.Runtime.InteropServices.RuntimeInformation.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System.Xml.Linq" />
@@ -51,8 +51,8 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
-    <Reference Include="XyrusWorx.Foundation, Version=1.7.9.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\XyrusWorx.Foundation.1.7.9\lib\net462\XyrusWorx.Foundation.dll</HintPath>
+    <Reference Include="XyrusWorx.Foundation, Version=1.8.10.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\XyrusWorx.Foundation.1.8.10\lib\net462\XyrusWorx.Foundation.dll</HintPath>
       <Private>True</Private>
     </Reference>
   </ItemGroup>
@@ -443,7 +443,7 @@
     <EmbeddedResource Include="Resources\Icons\Goods\Sugar.png" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Resources\Icons\Goods\SugarCanes.png" />
+    <EmbeddedResource Include="Resources\Icons\Goods\SugarCane.png" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Resources\Icons\Goods\Tools.png" />
